--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -104,15 +104,15 @@
   },
   "active": "c3496acdb52cf2e2",
   "lastOpenFiles": [
+    "index.md",
+    "Day Planners/2021-08-25.md",
     "Untitled.md",
     "00 START HERE.md",
-    "Day Planners/2021-08-25.md",
     "Fundamental Values.md",
     "Day Planners/Day Planner-20210825.md",
     "2021-08-25.md",
     "START HERE.md",
     "TODO/BMKA.md",
-    "TODO/Untitled.md",
-    "tes.md"
+    "TODO/Untitled.md"
   ]
 }
